# LlamaImpactHackathon2024

./: .gitignore  README.md  assemblyai_example.py  config.json  crewai_example.py  dummy_server.py  groq_example.py  package-lock.json
backend/: Makefile  README.md  main.py  pyproject.toml
backend/backend/: questions.py  summary.py  transcription.py
backend/backend/prompts/: best_results.txt  joiner.txt  new_questions.txt  question_combiner.txt  rm_questions.txt  summarise.txt
backend/tests/: audio_2_txt.py  infer_from_uni_txt.py  test_client.py  test_client_audio.py  victor_tonsils_uni.txt
frontend/: .gitignore  Makefile  dummy_server.py  package-lock.json  package.json
frontend/src/: index.html  main.js  preload.js
src/: index.html  main.js  preload.js
